test/scc/decl/semantic-errors/068.a
068.t:1:5: error: function returning function is not allowed